--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>h2attempt</groupId>
     <artifactId>h2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>h2</name>
     <description>Demo project for Spring Boot</description>
